Bug 475334 - Artifacting when flattening animation layer + transform mask
Summary: Artifacting when flattening animation layer + transform mask
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.2.0
Platform: Android Android 13.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-07 18:41 UTC by Redkitt3n14
Modified: 2024-02-28 18:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Redkitt3n14 2023-10-07 18:41:39 UTC
SUMMARY
Flatten layer leaving artifacts on animated layers

Note it is 5.2.0 release candidate 1

There are 2 duplicate issues from 2017 however they state to be fixed and the issue has re-emerged.

STEPS TO REPRODUCE
1. Make animaton
2. Add transform mask
3. Flatten layer

OBSERVED RESULT
chance of artifacting, may be higher when animaton is playing

EXPECTED RESULT
No artifacts on resultant layer

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Redkitt3n14 2023-10-07 18:49:23 UTC
Dropbox with example of artifact creation
https://www.dropbox.com/scl/fo/ly8awl7pnjwcvv6kjvjdl/h?rlkey=haq07riyubqugwg9sf3gagmyc&dl=0
Comment 2 Dmitry Kazakov 2023-10-23 15:09:28 UTC
Git commit b5b72a6de27d5d2b4236265ad6b14d255afb09d7 by Dmitry Kazakov.
Committed on 23/10/2023 at 17:08.
Pushed by dkazakov into branch 'master'.

Fix artifacts when flattening animated transform mask

In forceUpdateTimedNode() we should rerender the transform mask
in case the cache is not valid due to the time change.

M  +12   -2    libs/image/kis_transform_mask.cpp

https://invent.kde.org/graphics/krita/-/commit/b5b72a6de27d5d2b4236265ad6b14d255afb09d7
Comment 3 Dmitry Kazakov 2024-02-28 18:09:31 UTC
Git commit b545fc4f4e9f3b5c95b47d5af6ba92ce61d3ea0e by Dmitry Kazakov.
Committed on 28/02/2024 at 12:42.
Pushed by dkazakov into branch 'kazakov/for-5.2'.

Fix artifacts when flattening animated transform mask

In forceUpdateTimedNode() we should rerender the transform mask
in case the cache is not valid due to the time change.

M  +12   -2    libs/image/kis_transform_mask.cpp

https://invent.kde.org/graphics/krita/-/commit/b545fc4f4e9f3b5c95b47d5af6ba92ce61d3ea0e