Fix artifacts when flattening animated transform mask

In forceUpdateTimedNode() we should rerender the transform mask
in case the cache is not valid due to the time change.

BUG:475334